httpparser/generated/httpParser.cpp

// Generated from http.g4 by ANTLR 4.9


#include "httpVisitor.h"

#include "httpParser.h"
#include "httpParser.h"


using namespace antlrcpp;
using namespace antlr4;

httpParser::httpParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

httpParser::~httpParser() {
  delete _interpreter;
}

std::string httpParser::getGrammarFileName() const {
  return "http.g4";
}

const std::vector<std::string>& httpParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& httpParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- BwsContext ------------------------------------------------------------------

httpParser::BwsContext::BwsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

httpParser::OwsContext* httpParser::BwsContext::ows() {
  return getRuleContext<httpParser::OwsContext>(0);
}


size_t httpParser::BwsContext::getRuleIndex() const {
  return httpParser::RuleBws;
}


antlrcpp::Any httpParser::BwsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<httpVisitor*>(visitor))
    return parserVisitor->visitBws(this);
  else
    return visitor->visitChildren(this);
}

httpParser::BwsContext* httpParser::bws() {
  BwsContext *_localctx = _tracker.createInstance<BwsContext>(_ctx, getState());
  enterRule(_localctx, 0, httpParser::RuleBws);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(202);
    ows();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConnectionContext ------------------------------------------------------------------

httpParser::ConnectionContext::ConnectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<httpParser::Connection_optionContext *> httpParser::ConnectionContext::connection_option() {
  return getRuleContexts<httpParser::Connection_optionContext>();
}

httpParser::Connection_optionContext* httpParser::ConnectionContext::connection_option(size_t i) {
  return getRuleContext<httpParser::Connection_optionContext>(i);
}

std::vector<httpParser::OwsContext *> httpParser::ConnectionContext::ows() {
  return getRuleContexts<httpParser::OwsContext>();
}

httpParser::OwsContext* httpParser::ConnectionContext::ows(size_t i) {
  return getRuleContext<httpParser::OwsContext>(i);
}


size_t httpParser::ConnectionContext::getRuleIndex() const {
  return httpParser::RuleConnection;
}


antlrcpp::Any httpParser::ConnectionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<httpVisitor*>(visitor))
    return parserVisitor->visitConnection(this);
  else
    return visitor->visitChildren(this);
}

httpParser::ConnectionContext* httpParser::connection() {
  ConnectionContext *_localctx = _tracker.createInstance<ConnectionContext>(_ctx, getState());
  enterRule(_localctx, 2, httpParser::RuleConnection);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(208);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == httpParser::T__0) {
      setState(204);
      match(httpParser::T__0);
      setState(205);
      ows();
      setState(210);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(211);
    connection_option();
    setState(221);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == httpParser::T__0 || _la == httpParser::HTAB

    || _la == httpParser::SP) {
      setState(212);
      ows();
      setState(213);
      match(httpParser::T__0);
      setState(217);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
      case 1: {
        setState(214);
        ows();
        setState(215);
        connection_option();
        break;
      }

      default:
        break;
      }
      setState(223);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Content_lengthContext ------------------------------------------------------------------

httpParser::Content_lengthContext::Content_lengthContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> httpParser::Content_lengthContext::DIGIT() {
  return getTokens(httpParser::DIGIT);
}

tree::TerminalNode* httpParser::Content_lengthContext::DIGIT(size_t i) {
  return getToken(httpParser::DIGIT, i);
}


size_t httpParser::Content_lengthContext::getRuleIndex() const {
  return httpParser::RuleContent_length;
}


antlrcpp::Any httpParser::Content_lengthContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<httpVisitor*>(visitor))
    return parserVisitor->visitContent_length(this);
  else
    return visitor->visitChildren(this);
}

httpParser::Content_lengthContext* httpParser::content_length() {
  Content_lengthContext *_localctx = _tracker.createInstance<Content_lengthContext>(_ctx, getState());
  enterRule(_localctx, 4, httpParser::RuleContent_length);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(225); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(224);
      match(httpParser::DIGIT);
      setState(227); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == httpParser::DIGIT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Http_messageContext ------------------------------------------------------------------

httpParser::Http_messageContext::Http_messageContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

httpParser::Start_lineContext* httpParser::Http_messageContext::start_line() {
  return getRuleContext<httpParser::Start_lineContext>(0);
}

std::vector<httpParser::CrlfContext *> httpParser::Http_messageContext::crlf() {
  return getRuleContexts<httpParser::CrlfContext>();
}

httpParser::CrlfContext* httpParser::Http_messageContext::crlf(size_t i) {
  return getRuleContext<httpParser::CrlfContext>(i);
}

httpParser::Message_bodyContext* httpParser::Http_messageContext::message_body() {
  return getRuleContext<httpParser::Message_bodyContext>(0);
}

std::vector<httpParser::Header_fieldContext *> httpParser::Http_messageContext::header_field() {
  return getRuleContexts<httpParser::Header_fieldContext>();
}

httpParser::Header_fieldContext* httpParser::Http_messageContext::header_field(size_t i) {
  return getRuleContext<httpParser::Header_fieldContext>(i);
}


size_t httpParser::Http_messageContext::getRuleIndex() const {
  return httpParser::RuleHttp_message;
}


antlrcpp::Any httpParser::Http_messageContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<httpVisitor*>(visitor))
    return parserVisitor->visitHttp_message(this);
  else
    return visitor->visitChildren(this);
}

httpParser::Http_messageContext* httpParser::http_message() {
  Http_messageContext *_localctx = _tracker.createInstance<Http_messageContext>(_ctx, getState());
  enterRule(_localctx, 6, httpParser::RuleHttp_message);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(229);
    start_line();
    setState(235);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << httpParser::T__2)
      | (1ULL << httpParser::T__15)
      | (1ULL << httpParser::T__19)
      | (1ULL << httpParser::T__34)
      | (1ULL << httpParser::T__35)
      | (1ULL << httpParser::T__36)
      | (1ULL << httpParser::T__37)
      | (1ULL << httpParser::T__38)
      | (1ULL << httpParser::T__39)
      | (1ULL << httpParser::T__40)
      | (1ULL << httpParser::T__41)
      | (1ULL << httpParser::T__42)
      | (1ULL << httpParser::T__43)
      | (1ULL << httpParser::T__44))) != 0) || ((((_la - 76) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 76)) & ((1ULL << (httpParser::ASTERISK_FORM - 76))
      | (1ULL << (httpParser::ALPHA - 76))
      | (1ULL << (httpParser::DIGIT - 76)))) != 0)) {
      setState(230);
      header_field();
      setState(231);
      crlf();
      setState(237);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(238);
    crlf();
    setState(239);
    message_body();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Http_versionContext ------------------------------------------------------------------

httpParser::Http_versionContext::Http_versionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* httpParser::Http_versionContext::HTTP_NAME() {
  return getToken(httpParser::HTTP_NAME, 0);
}

std::vector<tree::TerminalNode *> httpParser::Http_versionContext::DIGIT() {
  return getTokens(httpParser::DIGIT);
}

tree::TerminalNode* httpParser::Http_versionContext::DIGIT(size_t i) {
  return getToken(httpParser::DIGIT, i);
}


size_t httpParser::Http_versionContext::getRuleIndex() const {
  return httpParser::RuleHttp_version;
}


antlrcpp::Any httpParser::Http_versionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<httpVisitor*>(visitor))
    return parserVisitor->visitHttp_version(this);
  else
    return visitor->visitChildren(this);
}

httpParser::Http_versionContext* httpParser::http_version() {
  Http_versionContext *_localctx = _tracker.createInstance<Http_versionContext>(_ctx, getState());
  enterRule(_localctx, 8, httpParser::RuleHttp_version);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(241);
    match(httpParser::HTTP_NAME);
    setState(242);
    match(httpParser::T__1);
    setState(243);
    match(httpParser::DIGIT);
    setState(244);
    match(httpParser::T__2);
    setState(245);
    match(httpParser::DIGIT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HostContext ------------------------------------------------------------------

httpParser::HostContext::HostContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

httpParser::Uri_hostContext* httpParser::HostContext::uri_host() {
  return getRuleContext<httpParser::Uri_hostContext>(0);
}

httpParser::PortContext* httpParser::HostContext::port() {
  return getRuleContext<httpParser::PortContext>(0);
}


size_t httpParser::HostContext::getRuleIndex() const {
  return httpParser::RuleHost;
}


antlrcpp::Any httpParser::HostContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<httpVisitor*>(visitor))
    return parserVisitor->visitHost(this);
  else
    return visitor->visitChildren(this);
}

httpParser::HostContext* httpParser::host() {
  HostContext *_localctx = _tracker.createInstance<HostContext>(_ctx, getState());
  enterRule(_localctx, 10, httpParser::RuleHost);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(247);
    uri_host();
    setState(250);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == httpParser::T__3) {
      setState(248);
      match(httpParser::T__3);
      setState(249);
      port();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OwsContext ------------------------------------------------------------------

httpParser::OwsContext::OwsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> httpParser::OwsContext::SP() {
  return getTokens(httpParser::SP);
}

tree::TerminalNode* httpParser::OwsContext::SP(size_t i) {
  return getToken(httpParser::SP, i);
}

std::vector<tree::TerminalNode *> httpParser::OwsContext::HTAB() {
  return getTokens(httpParser::HTAB);
}

tree::TerminalNode* httpParser::OwsContext::HTAB(size_t i) {
  return getToken(httpParser::HTAB, i);
}


size_t httpParser::OwsContext::getRuleIndex() const {
  return httpParser::RuleOws;
}


antlrcpp::Any httpParser::OwsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<httpVisitor*>(visitor))
    return parserVisitor->visitOws(this);
  else
    return visitor->visitChildren(this);
}

httpParser::OwsContext* httpParser::ows() {
  OwsContext *_localctx = _tracker.createInstance<OwsContext>(_ctx, getState());
  enterRule(_localctx, 12, httpParser::RuleOws);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(255);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(252);
        _la = _input->LA(1);
        if (!(_la == httpParser::HTAB

        || _la == httpParser::SP)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        } 
      }
      setState(257);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RwsContext ------------------------------------------------------------------

httpParser::RwsContext::RwsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> httpParser::RwsContext::SP() {
  return getTokens(httpParser::SP);
}

tree::TerminalNode* httpParser::RwsContext::SP(size_t i) {
  return getToken(httpParser::SP, i);
}

std::vector<tree::TerminalNode *> httpParser::RwsContext::HTAB() {
  return getTokens(httpParser::HTAB);
}

tree::TerminalNode* httpParser::RwsContext::HTAB(size_t i) {
  return getToken(httpParser::HTAB, i);
}


size_t httpParser::RwsContext::getRuleIndex() const {
  return httpParser::RuleRws;
}


antlrcpp::Any httpParser::RwsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<httpVisitor*>(visitor))
    return parserVisitor->visitRws(this);
  else
    return visitor->visitChildren(this);
}

httpParser::RwsContext* httpParser::rws() {
  RwsContext *_localctx = _tracker.createInstance<RwsContext>(_ctx, getState());
  enterRule(_localctx, 14, httpParser::RuleRws);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(259); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(258);
              _la = _input->LA(1);
              if (!(_la == httpParser::HTAB

              || _la == httpParser::SP)) {
              _errHandler->recoverInline(this);
              }
              else {
                _errHandler->reportMatch(this);
                consume();
              }
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(261); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TeContext ------------------------------------------------------------------

httpParser::TeContext::TeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<httpParser::T_codingsContext *> httpParser::TeContext::t_codings() {
  return getRuleContexts<httpParser::T_codingsContext>();
}

httpParser::T_codingsContext* httpParser::TeContext::t_codings(size_t i) {
  return getRuleContext<httpParser::T_codingsContext>(i);
}

std::vector<httpParser::OwsContext *> httpParser::TeContext::ows() {
  return getRuleContexts<httpParser::OwsContext>();
}

httpParser::OwsContext* httpParser::TeContext::ows(size_t i) {
  return getRuleContext<httpParser::OwsContext>(i);
}


size_t httpParser::TeContext::getRuleIndex() const {
  return httpParser::RuleTe;
}


antlrcpp::Any httpParser::TeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<httpVisitor*>(visitor))
    return parserVisitor->visitTe(this);
  else
    return visitor->visitChildren(this);
}

httpParser::TeContext* httpParser::te() {
  TeContext *_localctx = _tracker.createInstance<TeContext>(_ctx, getState());
  enterRule(_localctx, 16, httpParser::RuleTe);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(279);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << httpParser::T__0)
      | (1ULL << httpParser::T__2)
      | (1ULL << httpParser::T__10)
      | (1ULL << httpParser::T__11)
      | (1ULL << httpParser::T__15)
      | (1ULL << httpParser::T__19)
      | (1ULL << httpParser::T__34)
      | (1ULL << httpParser::T__35)
      | (1ULL << httpParser::T__36)
      | (1ULL << httpParser::T__37)
      | (1ULL << httpParser::T__38)
      | (1ULL << httpParser::T__39)
      | (1ULL << httpParser::T__40)
      | (1ULL << httpParser::T__41)
      | (1ULL << httpParser::T__42)
      | (1ULL << httpParser::T__43)
      | (1ULL << httpParser::T__44)
      | (1ULL << httpParser::T__45)
      | (1ULL << httpParser::T__46)
      | (1ULL << httpParser::T__53)
      | (1ULL << httpParser::T__54)
      | (1ULL << httpParser::T__61)
      | (1ULL << httpParser::T__62))) != 0) || ((((_la - 76) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 76)) & ((1ULL << (httpParser::ASTERISK_FORM - 76))
      | (1ULL << (httpParser::ALPHA - 76))
      | (1ULL << (httpParser::DIGIT - 76)))) != 0)) {
      setState(265);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case httpParser::T__0: {
          setState(263);
          match(httpParser::T__0);
          break;
        }

        case httpParser::T__2:
        case httpParser::T__10:
        case httpParser::T__11:
        case httpParser::T__15:
        case httpParser::T__19:
        case httpParser::T__34:
        case httpParser::T__35:
        case httpParser::T__36:
        case httpParser::T__37:
        case httpParser::T__38:
        case httpParser::T__39:
        case httpParser::T__40:
        case httpParser::T__41:
        case httpParser::T__42:
        case httpParser::T__43:
        case httpParser::T__44:
        case httpParser::T__45:
        case httpParser::T__46:
        case httpParser::T__53:
        case httpParser::T__54:
        case httpParser::T__61:
        case httpParser::T__62:
        case httpParser::ASTERISK_FORM:
        case httpParser::ALPHA:
        case httpParser::DIGIT: {
          setState(264);
          t_codings();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(276);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == httpParser::T__0 || _la == httpParser::HTAB

      || _la == httpParser::SP) {
        setState(267);
        ows();
        setState(268);
        match(httpParser::T__0);
        setState(272);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
        case 1: {
          setState(269);
          ows();
          setState(270);
          t_codings();
          break;
        }
